# specwizard

./: .gitignore  Eagle_PowerSpectrum.ipynb  README.md  README.rst  pyproject.toml
docs/source/: conf.py  conf.py~  index.rst  index.rst~  modules.rst  specwizard.rst
specwizard/: Alternative_SpecWizard_Input.py  Analisisspectra_L0100N1504_snapshot_028_z000p000  Galaxy_metals-example.ipynb  Phys.py  SimulationInputKeys.py  SpecWizard_AnalyseOpticaldepth.py  SpecWizard_Atomfile.py  SpecWizard_BuildInput.py  SpecWizard_ComputeOpticaldepth.py  SpecWizard_ComputeOpticaldepth_alotoffunctions.py  SpecWizard_ComputeOpticaldepth_test.py  SpecWizard_Elements.py  SpecWizard_Input.py  SpecWizard_IonTables.py  SpecWizard_IonTables_hm01.py  SpecWizard_IonTables_test.py  SpecWizard_IonizationBalance.py  SpecWizard_Lines.py  SpecWizard_Lines_alotoffunctions.py  SpecWizard_Lines_tom.py  SpecWizard_Longspectra.py  SpecWizard_Longspectra_coven.py  SpecWizard_ProjectData.py  SpecWizard_ProjectData_test.py  SpecWizard_Run_Cloudy.py  SpecWizard_SaveOpticaldepth.py  SpecWizard_SplineInterpolation.py  SpecWizard_read_obs_data.py  Wizard.yml  __init__.py  h1damping.py  hydrangea_all_clusters_center_coordinates_r500  reading_simulations.py  specwizard.py  test.yml
specwizard.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
specwizard/.ipynb_checkpoints/: Galaxy_metals-example-checkpoint.ipynb  SpecWizard_BuildInput-checkpoint.ipynb  SpecWizard_ComputeOpticaldepth-checkpoint.ipynb  SpecWizard_Input-checkpoint.ipynb  SpecWizard_Input2-checkpoint.ipynb  SpecWizard_ProjectData-checkpoint.ipynb
(+34 files in other folders)
