[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "specwizard"
version = "0.9.0.3"
authors = [
    { name="Andres Aramburo-Garcia", email="aramburo@lorentz.leidenuniv.nl" },{name = "Tom Theuns", email = "tom.theuns@durham.ac.uk"},
]
description="."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "swiftsimio",
    "mendeleev",
    "roman",
    "swiftsimio",
    "pyread_eagle",
    "matplotlib",
    "hydrangea",
    "bs4",
    "yaml",
    "h5py",
    "astropy"
]

[project.urls]
"Homepage" = "https://github.com/specwizard/specwizard"
"Bug Tracker" = "https://github.com/specwizard/specwizard/issues"
